--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,8 @@ section ul {
     transition: transform .3s;
 }
 section ul li {
-    transition: transform 0.3s;
+    transition: transform 0.3s
+;
 }
 
 section ul li:hover {
