--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ ul {
 }
 
 body {
-    background-image: url(./Assets/bg.jpg);
+    background-image: url(./assets/fundo\ bg.jpg);
     background-position: top center;
     background-size: 100% auto;
     background-repeat: no-repeat;
@@ -87,8 +87,7 @@ section ul {
     transition: transform .3s;
 }
 section ul li {
-    transition: transform 0.3s
-;
+    transition: transform 0.3s;
 }
 
 section ul li:hover {
